--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 annotated-types==0.7.0
 anyio==4.10.0
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 colorama==0.4.6
+cryptography==45.0.7
 distro==1.9.0
 feedparser==6.0.11
 h11==0.16.0
@@ -11,8 +13,12 @@ httpx==0.28.1
 idna==3.10
 jiter==0.10.0
 openai==1.106.1
+pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
+PyGithub==2.8.1
+PyJWT==2.10.1
+PyNaCl==1.6.0
 python-dotenv==1.1.1
 requests==2.32.5
 sgmllib3k==1.0.0
