--- a/tasks.json
+++ b/tasks.json
@@ -23,5 +23,10 @@
         "url": "https://cpp-luxury.com/feed/",
         "system_prompt": "prompts/boutique_prompt.txt",
         "to_email": ["yechao25@gmail.com"]
+    },
+    {
+        "url": "https://www.luxurydaily.com/category/sectors/retail-industry-sectors/feed/",
+        "system_prompt": "prompts/boutique_prompt.txt",
+        "to_email": ["yechao25@gmail.com"]
     }
 ]
