added another rss source of wall street journal

--- a/tasks.json
+++ b/tasks.json
@@ -10,6 +10,11 @@
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
+        "url": "https://feeds.content.dowjones.io/public/rss/socialeconomyfeed",
+        "system_prompt": null,
+        "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
+    },
+    {
         "url": "https://www.scmp.com/rss/43/feed/",
         "system_prompt": null,
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
