added more tasks

--- a/tasks.json
+++ b/tasks.json
@@ -5,6 +5,21 @@
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
+        "url": "https://feeds.bloomberg.com/economics/news.rss",
+        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
+    },
+    {
+        "url": "https://feeds.bloomberg.com/politics/news.rss",
+        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
+    },
+    {
+        "url": "https://feeds.bloomberg.com/technology/news.rss",
+        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
+    },
+    {
         "url": "https://search.cnbc.com/rs/search/combinedcms/view.xml?partnerId=wrss01&id=19832390",
         "system_prompt": "prompts/bloomberg_china_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
