modified code for filtering wall street journal economy news

--- a/tasks.json
+++ b/tasks.json
@@ -26,7 +26,7 @@
     },
     {
         "url": "https://feeds.content.dowjones.io/public/rss/socialeconomyfeed",
-        "system_prompt": null,
+        "system_prompt": "prompts/bloomberg_china_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
