--- a/tasks.json
+++ b/tasks.json
@@ -11,7 +11,7 @@
     },
     {
         "url": "https://feeds.bloomberg.com/technology/news.rss",
-        "system_prompt": null,
+        "system_prompt": "prompts/bloomberg_china_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
