--- a/tasks.json
+++ b/tasks.json
@@ -1,37 +1,42 @@
 [
     {
         "url": "https://feeds.bloomberg.com/markets/news.rss",
-        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "system_prompt": "prompts/boutique_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
         "url": "https://feeds.bloomberg.com/politics/news.rss",
-        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "system_prompt": "prompts/boutique_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
         "url": "https://feeds.bloomberg.com/technology/news.rss",
-        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "system_prompt": "prompts/boutique_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
         "url": "https://search.cnbc.com/rs/search/combinedcms/view.xml?partnerId=wrss01&id=19832390",
-        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "system_prompt": "prompts/boutique_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
         "url": "https://search.cnbc.com/rs/search/combinedcms/view.xml?partnerId=wrss01&id=19854910",
-        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "system_prompt": "prompts/boutique_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
         "url": "https://feeds.content.dowjones.io/public/rss/RSSWorldNews",
-        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "system_prompt": "prompts/boutique_prompt.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
         "url": "https://feeds.content.dowjones.io/public/rss/socialeconomyfeed",
-        "system_prompt": "prompts/bloomberg_china_prompt.txt",
+        "system_prompt": "prompts/boutique_prompt.txt",
+        "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
+    },
+    {
+        "url": "https://finance.yahoo.com/news/rss",
+        "system_prompt": "prompts/ai.txt",
         "to_email": ["yechao25@gmail.com", "zhanghc27@126.com"]
     },
     {
