modified the prompt

--- a/combined_tasks.json
+++ b/combined_tasks.json
@@ -34,7 +34,7 @@
             "https://www.luxurydaily.com/category/sectors/retail-industry-sectors/feed/",
             "https://www.justluxe.com/rss/rss-channels.php?cat=9"
         ],
-        "system_prompt": "prompts/boutique_prompt.txt",
+        "system_prompt": "prompts/luxury_retail_prompt.txt",
         "to_email": ["yechao25@gmail.com"]
     }
 ]
